--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
   "name": "boomer-backend",
   "version": "1.0.0",
-  "description": "Financial control",
-  "main": "index.js",
+  "description": "",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "webpack --watch --config webpack.config.js",
-    "dev": "nodemon src/index.js"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts --exec ts-node",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Flavio Aro",
+  "author": "flavio.aro@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "@types/mysql2": "github:types/mysql2",
     "express": "^4.17.1",
-    "express-mysql-session": "^2.1.5",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "pg": "^8.5.1"
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/register": "^7.12.10",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.16.0",
-    "nodemon": "^2.0.6",
-    "nodemon-webpack-plugin": "^4.3.2",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0",
-    "webpack-node-externals": "^2.5.2"
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^13.13.4",
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   }
 }
